# hiphop-php

./: .gitignore  .hgignore  CMakeLists.txt  INSTALL.txt  README.md  build.sh  build_dependencies  tuenti_build_packages.sh
src/: CMakeLists.txt  dirs.mk
src/compiler/: code_generator.h  option.cpp  option.h
src/compiler/analysis/: analysis_result.cpp  file_scope.cpp  file_scope.h  function_scope.cpp  variable_table.cpp
src/compiler/expression/: new_object_expression.cpp  simple_function_call.cpp
src/compiler/parser/: hphp.tab.cpp
src/compiler/statement/: class_statement.cpp
src/hphp/: CMakeLists.txt  externals.cpp
src/hphpi/: Makefile
src/idl/: Makefile  bucketcache.idl.php  datetime.idl.php  ext_filter.cpp  ext_filter.h  ext_xconfig.cpp  ext_xconfig.h  fb.idl.php  file.idl.php  fileinfo.idl.php  filter.idl.php  fixes.idl.php  fixes.inc  geoip.idl.php  gettext.idl.php  gmagick.idl.php  json.idl.php  json.inc  memcachepool.idl.php  network.idl.php  test_ext_xconfig.cpp  test_ext_xconfig.h  tuenti_jsonloader.idl.php  userpartition.idl.php  xconfig.idl.php  xconfig.inc
src/runtime/: makeall.sh
src/runtime/base/: builtin_functions.cpp  class_info.cpp  externals.h  fiber_async_func.cpp  fiber_safe.h  global_array_wrapper.cpp  object_data.cpp  object_data.h  preg.cpp  program_functions.cpp  program_functions.h  runtime_error.cpp  runtime_option.cpp  runtime_option.h  string_data.h  thread_init_fini.cpp  type_array.cpp  type_string.h  type_variant.cpp  variable_serializer.cpp
src/runtime/base/array/: array_util.cpp  array_util.h  small_array.cpp  zend_array.cpp
src/runtime/base/file/: socket.cpp  socket.h  ssl_socket.cpp  ssl_socket.h
src/runtime/base/memory/: smart_allocator.h
src/runtime/base/server/: http_protocol.cpp  http_request_handler.cpp  http_server.cpp  http_server.h  libevent_server.cpp  libevent_server.h  libevent_server_with_fd.cpp  libevent_server_with_takeover.cpp  libevent_server_with_takeover.h  libevent_transport.cpp  request_uri.cpp  rpc_request_handler.cpp  server.h  transport.cpp  transport.h
src/runtime/base/time/: datetime.cpp
src/runtime/base/util/: exceptions.h
src/runtime/base/zend/: crypt_blowfish.cpp  crypt_blowfish.h  zend_html.cpp  zend_pack.cpp  zend_pack.h  zend_string.cpp  zend_url.cpp  zend_url.h
src/runtime/eval/ast/: binary_op_expression.cpp  class_statement.cpp  instanceof_expression.cpp  list_assignment_expression.cpp  method_statement.cpp  object_method_expression.cpp  static_method_expression.cpp
src/runtime/eval/debugger/: dummy_sandbox.cpp
src/runtime/eval/parser/: eval_parser.cpp  hphp.tab.cpp
src/runtime/ext/: JSON_parser.cpp  JSON_parser.h  ext.h  ext_bucketcache.cpp  ext_bucketcache.h  ext_class.cpp  ext_datetime.cpp  ext_datetime.h  ext_debugger.cpp  ext_debugger.h  ext_domdocument.cpp  ext_domdocument.h  ext_error.cpp  ext_file.cpp  ext_file.h  ext_fileinfo.cpp  ext_fileinfo.h  ext_filter.cpp  ext_filter.h  ext_fixes.cpp  ext_fixes.h  ext_function.cpp  ext_geoip.cpp  ext_geoip.h  ext_gettext.cpp  ext_gettext.h  ext_gmagick.cpp  ext_gmagick.h  ext_hotprofiler.cpp  ext_icu.cpp  ext_icu_uspoof.cpp  ext_icu_uspoof.h  ext_intl.cpp  ext_intl.h  ext_iterator.cpp  ext_json.cpp  ext_json.h  ext_mb.cpp  ext_memcached.cpp  ext_memcached.h  (+23 more)
src/runtime/ext/filter/: callback_filter.cpp  filter_private.h  logical_filters.cpp  php_filter.h  sanitizing_filters.cpp
src/runtime/ext/profile/: extprofile_bucketcache.h  extprofile_datetime.h  extprofile_file.h  extprofile_fileinfo.h  extprofile_filter.h  extprofile_fixes.h  extprofile_geoip.h  extprofile_gettext.h  extprofile_gmagick.h  extprofile_intl.h  extprofile_json.h  extprofile_memcachepool.h  extprofile_network.h  extprofile_tuenti_jsonloader.h  extprofile_userpartition.h  extprofile_xconfig.h
src/runtime/tmp/: Makefile  script.mk
src/system/: bucketcache.inc  datetime.inc  ext.inc  fb.inc  file.inc  fileinfo.inc  filter.inc  geoip.inc  gettext.inc  gmagick.inc  memcachepool.inc  network.inc  tuenti_jsonloader.inc  userpartition.inc  xconfig.inc
src/system/classes/: exception.php  reflection.php  splobjectstorage.php
src/system/lib/: systemlib.cpp  systemlib.h
src/test/: CMakeLists.txt  dummy_mysql_info.inc  test_code_error.cpp  test_code_run.cpp  test_ext.h  test_ext.inc  test_ext_bucketcache.cpp  test_ext_bucketcache.h  test_ext_curl.cpp  test_ext_datetime.cpp  test_ext_datetime.h  test_ext_fileinfo.cpp  test_ext_fileinfo.h  test_ext_filter.cpp  test_ext_filter.h  test_ext_fixes.cpp  test_ext_fixes.h  test_ext_function.cpp  test_ext_geoip.cpp  test_ext_geoip.h  test_ext_gettext.cpp  test_ext_gettext.h  test_ext_gmagick.cpp  test_ext_gmagick.h  test_ext_icu_uspoof.cpp  test_ext_intl.cpp  test_ext_mb.cpp  test_ext_memcached.cpp  test_ext_memcachepool.cpp  test_ext_memcachepool.h  test_ext_network.cpp  test_ext_network.h  test_ext_openssl.cpp  test_ext_openssl.h  test_ext_options.cpp  test_ext_pdo.cpp  test_ext_preg.cpp  test_ext_process.cpp  test_ext_string.cpp  test_ext_tuenti_jsonloader.cpp  (+9 more)
src/test/json_files/: databaseConfig.php.json  memcacheConfig.php.json
src/test/php_test/: bucket_cache.php  runtest.sh  server.hdf  user_partition.php
src/test/phpt/: run_phpt.sh
src/test/phpt/fileinfo/: finfo_buffer_basic.phpt  finfo_close_basic.phpt  finfo_close_error.phpt  finfo_file_001.phpt  finfo_file_002.phpt  finfo_file_basic.phpt  finfo_open_001.phpt  finfo_open_basic.phpt  finfo_open_error.phpt  finfo_open_variation1.phpt  finfo_set_flags_basic.phpt  magic.mgc
src/test/phpt/filter/: 008.phpt  009.phpt  010.phpt  013.phpt  017.phpt  031.phpt  033.phpt  034.phpt  039.phpt  042.phpt  046.phpt  052.phpt  bug47435.phpt  bug47745.phpt  bug50158.phpt  bug7586.phpt  bug7715.phpt
src/test/phpt/geoip/: 003.phpt  004.phpt  005.phpt  010.phpt  011.phpt  016.phpt
src/test/phpt/json/: 001.phpt  007.phpt  (+3 more)
src/util/: ares.h  ares.h.in  compression.cpp  dataset.h  db_mysql.cpp  db_mysql.h  light_process.cpp  light_process.h  network.cpp  network.h  smart_str.h  util.cpp  util.h
src/util/neo/: neo_str.c
src/util/parser/: hphp.tab.hpp  hphp.y
(+12 files in other folders)
